infra/k8s-deploy/ingress.yaml
# 외부 트래픽을 받아주는 Ingress 설정
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: likelion-ingress
  namespace: inspire12

spec:
  ingressClassName: nginx  # 사용할 Ingress Controller (보통 nginx)
  rules:
    - host: likelion.local  # 요청 도메인 기반으로 라우팅할 도메인
      http:
        paths:
          - path: /sample
            pathType: Prefix  # "/sample"으로 시작하는 모든 경로 허용
            backend:
              service:
                name: likelion-backend  # 연결할 서비스 이름
                port:
                  number: 80            # 연결할 서비스 포트 (위 Service의 port)
